add player image

--- a/site-List-2.html
+++ b/site-List-2.html
@@ -245,7 +245,8 @@
 
             <div>
                 <div class="img_box1 title_logo mb60">
-                    <img src="http://synth.huizhirh.com/public/upload/11/fd894f9fdabe9b19911e5dff962a1f.png">
+                    <!--<img src="http://synth.huizhirh.com/public/upload/11/fd894f9fdabe9b19911e5dff962a1f.png">-->
+                    <img src="static/picture/player.png" />
                 </div>
                 <div class="d-grid grid3 gap20 lt_dl grid-xs1">
 
