--- a/index.html
+++ b/index.html
@@ -237,8 +237,9 @@
                 <p style="text-indent: 2em; text-align: justify;">Drawing inspiration from the traditional Chinese &#39;Sword Tomb&#39;, this study introduces a novel evolutionary strategy to refine the Natural Killer (NK) cell receptor repertoire, akin to selecting the most fitting sword for each battle against tumor, to counteract the diverse and elusive nature of tumor cells.</p></div>
         </div>
                    <div class="">
-        <video class="video" controls="" src="http://synth.huizhirh.com/public/home/images/video2.mp4"></video>
-            
+        <!--<video class="video" controls="" src="http://synth.huizhirh.com/public/home/images/video2.mp4"></video>-->
+        <video class="video" controls="" src="static/video/video2.mp4"></video>
+
         </div>
             </div>
             </div>
