--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
             
         <div class="d-grid al-c grid2 gap30 calisto_ft">
                 <div class="">
-             <video class="video" controls="" src="http://synth.huizhirh.com/public/home/images/video1.mp4"></video>
+             <!--<video class="video" controls="" src="http://synth.huizhirh.com/public/home/images/video1.mp4"></video>-->
+             <video class="video" controls="" src="static/video/video1.mp4"></video>
         </div>
                 <div>
             <div class="t1  ft50 ft-bold text-align-center">Evolution&#039;s Past and Present</div>
