--- a/site-List-2.html
+++ b/site-List-2.html
@@ -61,19 +61,22 @@
                         </div>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="site-List-21.html">Background</a>
+                                <a href="background.html">Background</a>
                             </dd>
                             <dd>
-                                <a href="site-List-22.html">Design</a>
+                                <a href="design.html">Design</a>
                             </dd>
                             <dd>
-                                <a href="site-List-23.html">Result</a>
+                                <a href="result.html">Result</a>
                             </dd>
                             <dd>
-                                <a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>
+                                <!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>-->
+                                <a href="static/file/Report-SynthImmunol_NMU.pdf" target="_blank">Report</a>
                             </dd>
                             <dd>
-                                <a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary
+                                <!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary
+                                    information</a>-->
+                                <a href="static/file/Supplement-SynthImmunol_NMU.pdf" target="_blank">Supplementary
                                     information</a>
                             </dd>
                         </dl>
@@ -91,7 +94,7 @@
                                 <a href="">Member</a>
                             </dd>
                             <dd>
-                                <a href="site-List-20.html">Community contribution</a>
+                                <a href="community-contribution.html">Community contribution</a>
                             </dd>
                         </dl>
                     </li>
@@ -105,10 +108,10 @@
                         </div>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="site-List-10.html">NoteBook</a>
+                                <a href="notebook.html">NoteBook</a>
                             </dd>
                             <dd>
-                                <a href="site-List-3.html">Protocol</a>
+                                <a href="protocol.html">Protocol</a>
                             </dd>
                         </dl>
                     </li>
@@ -146,19 +149,22 @@
                             <a> Project</a>
                             <dl class="layui-nav-child">
                                 <dd>
-                                    <a href="site-List-21.html">Background</a>
+                                    <a href="background.html">Background</a>
                                 </dd>
                                 <dd>
-                                    <a href="site-List-22.html">Design</a>
+                                    <a href="design.html">Design</a>
                                 </dd>
                                 <dd>
-                                    <a href="site-List-23.html">Result</a>
+                                    <a href="result.html">Result</a>
                                 </dd>
                                 <dd>
-                                    <a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>
+                                    <!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>-->
+                                    <a href="static/file/Report-SynthImmunol_NMU.pdf" target="_blank">Report</a>
                                 </dd>
                                 <dd>
-                                    <a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary
+                                    <!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary
+                                        information</a>-->
+                                    <a href="static/file/Supplement-SynthImmunol_NMU.pdf" target="_blank">Supplementary
                                         information</a>
                                 </dd>
                             </dl>
@@ -170,7 +176,7 @@
                                     <a href="">Member</a>
                                 </dd>
                                 <dd>
-                                    <a href="site-List-20.html">Community contribution</a>
+                                    <a href="community-contribution.html">Community contribution</a>
                                 </dd>
                             </dl>
                         </li>
@@ -178,10 +184,10 @@
                             <a> Documentation</a>
                             <dl class="layui-nav-child">
                                 <dd>
-                                    <a href="site-List-10.html">NoteBook</a>
+                                    <a href="notebook.html">NoteBook</a>
                                 </dd>
                                 <dd>
-                                    <a href="site-List-3.html">Protocol</a>
+                                    <a href="protocol.html">Protocol</a>
                                 </dd>
                             </dl>
                         </li>
