--- a/site-List-20.html
+++ b/site-List-20.html
@@ -60,19 +60,21 @@
 							</div>
 							  								<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-21.html">Background</a>
+										<a href="background.html">Background</a>
 									</dd>
 																		<dd>
-										<a href="site-List-22.html">Design</a>
+										<a href="design.html">Design</a>
 									</dd>
 																		<dd>
-										<a href="site-List-23.html">Result</a>
+										<a href="result.html">Result</a>
 									</dd>
 																		<dd>
-										<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>
+										<!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>-->
+										<a href="static/file/Report-SynthImmunol_NMU.pdf" target="_blank">Report</a>
 									</dd>
 																		<dd>
-										<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary information</a>
+										<!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary information</a>-->
+										<a href="static/file/Supplement-SynthImmunol_NMU.pdf" target="_blank">Supplementary information</a>
 									</dd>
 																	</dl>
 															</li>
@@ -87,7 +89,7 @@
 							</div>
 							  								<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-2.html">Member</a>
+										<a href="member.html">Member</a>
 									</dd>
 																		<dd>
 										<a href="">Community contribution</a>
@@ -105,10 +107,10 @@
 							</div>
 							  								<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-10.html">NoteBook</a>
+										<a href="notebook.html">NoteBook</a>
 									</dd>
 																		<dd>
-										<a href="site-List-3.html">Protocol</a>
+										<a href="protocol.html">Protocol</a>
 									</dd>
 																	</dl>
 															</li>
@@ -148,19 +150,21 @@
 								<a> Project</a>
 																<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-21.html">Background</a>
+										<a href="background.html">Background</a>
 									</dd>
 																		<dd>
-										<a href="site-List-22.html">Design</a>
+										<a href="design.html">Design</a>
 									</dd>
 																		<dd>
-										<a href="site-List-23.html">Result</a>
+										<a href="result.html">Result</a>
 									</dd>
 																		<dd>
-										<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>
+										<!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>-->
+										<a href="static/file/Report-SynthImmunol_NMU.pdf" target="_blank">Report</a>
 									</dd>
 																		<dd>
-										<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary information</a>
+										<!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary information</a>-->
+										<a href="static/file/Supplement-SynthImmunol_NMU.pdf" target="_blank">Supplementary information</a>
 									</dd>
 																	</dl>
 															</li>
@@ -168,7 +172,7 @@
 								<a> Team</a>
 																<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-2.html">Member</a>
+										<a href="member.html">Member</a>
 									</dd>
 																		<dd>
 										<a href="">Community contribution</a>
@@ -179,10 +183,10 @@
 								<a> Documentation</a>
 																<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-10.html">NoteBook</a>
+										<a href="notebook.html">NoteBook</a>
 									</dd>
 																		<dd>
-										<a href="site-List-3.html">Protocol</a>
+										<a href="protocol.html">Protocol</a>
 									</dd>
 																	</dl>
 															</li>
