--- a/site-List-3.html
+++ b/site-List-3.html
@@ -62,19 +62,21 @@ This section shows details of the experiments that are not shown in detail in th
 							</div>
 							  								<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-21.html">Background</a>
+										<a href="background.html">Background</a>
 									</dd>
 																		<dd>
-										<a href="site-List-22.html">Design</a>
+										<a href="design.html">Design</a>
 									</dd>
 																		<dd>
-										<a href="site-List-23.html">Result</a>
+										<a href="result.html">Result</a>
 									</dd>
 																		<dd>
-										<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>
+										<!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>-->
+										<a href="static/file/Report-SynthImmunol_NMU.pdf" target="_blank">Report</a>
 									</dd>
 																		<dd>
-										<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary information</a>
+										<!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary information</a>-->
+										<a href="static/file/Supplement-SynthImmunol_NMU.pdf" target="_blank">Supplementary information</a>
 									</dd>
 																	</dl>
 															</li>
@@ -89,10 +91,10 @@ This section shows details of the experiments that are not shown in detail in th
 							</div>
 							  								<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-2.html">Member</a>
+										<a href="member.html">Member</a>
 									</dd>
 																		<dd>
-										<a href="site-List-20.html">Community contribution</a>
+										<a href="community-contribution.html">Community contribution</a>
 									</dd>
 																	</dl>
 															</li>
@@ -107,7 +109,7 @@ This section shows details of the experiments that are not shown in detail in th
 							</div>
 							  								<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-10.html">NoteBook</a>
+										<a href="notebook.html">NoteBook</a>
 									</dd>
 																		<dd>
 										<a href="">Protocol</a>
@@ -150,19 +152,21 @@ This section shows details of the experiments that are not shown in detail in th
 								<a> Project</a>
 																<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-21.html">Background</a>
+										<a href="background.html">Background</a>
 									</dd>
 																		<dd>
-										<a href="site-List-22.html">Design</a>
+										<a href="design.html">Design</a>
 									</dd>
 																		<dd>
-										<a href="site-List-23.html">Result</a>
+										<a href="result.html">Result</a>
 									</dd>
 																		<dd>
-										<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>
+										<!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Report</a>-->
+										<a href="static/file/Report-SynthImmunol_NMU.pdf" target="_blank">Report</a>
 									</dd>
 																		<dd>
-										<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary information</a>
+										<!--<a href="static/file/2353acb0b22da6619d01174d877b64.pdf" target="_blank">Supplementary information</a>-->
+										<a href="static/file/Supplement-SynthImmunol_NMU.pdf" target="_blank">Supplementary information</a>
 									</dd>
 																	</dl>
 															</li>
@@ -170,10 +174,10 @@ This section shows details of the experiments that are not shown in detail in th
 								<a> Team</a>
 																<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-2.html">Member</a>
+										<a href="member.html">Member</a>
 									</dd>
 																		<dd>
-										<a href="site-List-20.html">Community contribution</a>
+										<a href="community-contribution.html">Community contribution</a>
 									</dd>
 																	</dl>
 															</li>
@@ -181,7 +185,7 @@ This section shows details of the experiments that are not shown in detail in th
 								<a> Documentation</a>
 																<dl class="layui-nav-child">
 																		<dd>
-										<a href="site-List-10.html">NoteBook</a>
+										<a href="notebook.html">NoteBook</a>
 									</dd>
 																		<dd>
 										<a href="">Protocol</a>
